# Doxygen-Dependency-Parser

./: .doxygen-index.toml  .env.example  .gitignore  .gitmodules  README.md  conftest.py  plan.md  pyproject.toml  test_cpp_sqlite.sh
.superpowers/brainstorm/45101-1780258472/content/: architecture-overview.html  waiting.html
docs/plans/: 2025-06-08-calls-to-invokes.md  2025-06-08-cli-project-mode.md  2026-05-31-codegraph-atomization-refactor.md
docs/specs/: 2025-06-08-calls-to-invokes-design.md  2025-06-08-codegraph-sync-todo.md  2026-05-31-codegraph-atomization-refactor-design.md
examples/: doxygen_to_neo4j.py
mcp/: mcp_neo4j_codebase_server.py
scripts/: parse_codegraph.py  parse_ticketing.py  test_codegraph_python.py  test_codegraph_python.sh  write_test_descriptions_from_graph.py
src/doxygen_index/: __init__.py  cli.py  conan.py  csv_export.py  deps_config.py  doxygen.py  enrich.py  graph_json.py  json_backend.py  neo4j_backend.py  parser.py  pipeline.py  project.py  sqlite_backend.py  tools.py
src/doxygen_index/cppreference/: __init__.py  classifier.py  downloader.py  html_helpers.py  page_parser.py
src/doxygen_index/parser/: __init__.py  base.py  cpp_parser.py  helpers.py  model.py  python_parser.py
tests/: conftest.py  docker-compose.yml  test_cpp_sqlite_integration.py  test_derive_invokes.py  test_enrich.py  test_incremental_reindex.py  test_languages_fixture.py  test_parser.py  test_test_comments.py  test_uid.py
tests/data/: cpp_sqlite_parsed.json
tests/languages/python/: .doxygen-index.toml  .gitignore
(+21 files in other folders)
